Record Android revokes in Permissions.Action.Notification.

This CL modifies fixes a bug in which metrics were not being recorded on
Android when notification permissions were revoked. It adds a missing
ScopedRevocationReporter for Chrome-visible changes, and adds detection
code for when notification permissions are revoked in Android O+
system channel settings.

Bug: 782126
Change-Id: I609e909936d09e6dd948f0601bbf73ecdb6b8b75
Reviewed-on: https://chromium-review.googlesource.com/c/1324394
Commit-Queue: Joe DeBlasio <jdeblasio@chromium.org>
Reviewed-by: Theresa <twellington@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Bryan McQuade <bmcquade@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Christopher Thompson <cthomp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606887}
Former-commit-id: f8c0f174bb015976222531ead359ade19b488833